# FastaCompressor

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bloom_filter.c  bloom_filter.h  compress.c  de_bruijn_graph.c  de_bruijn_graph.h  decompress.c  decompress_thread.c  decompress_thread.h  fasta.c  fasta.h  file_buffer.c  file_buffer.h  getline.c  getline.h  queue.c  queue.h  string_utils.c  string_utils.h  utils.c  utils.h  vector.c  vector.h
test/: CMakeLists.txt  test_bloom_filter.c  test_de_bruijn_graph.c  test_fasta.c  test_file_buffer.c  test_queue.c  test_string_utils.c  test_utils.c  test_vector.c
